--- a/PatientSearchModule/Views/PatientSearch.xaml
+++ b/PatientSearchModule/Views/PatientSearch.xaml
@@ -5,12 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:viewModels="clr-namespace:PatientSearchModule.ViewModels"
-             xmlns:mvvm="http://prismlibrary.com/"
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="300"
-             d:DataContext="{d:DesignInstance viewModels:PatientSearchViewModel}"
-             mvvm:ViewModelLocator.AutoWireViewModel="True">
+             d:DataContext="{d:DesignInstance viewModels:PatientSearchViewModel}">
     <DockPanel LastChildFill="True"
                HorizontalAlignment="Stretch"
                VerticalAlignment="Stretch">
@@ -25,7 +23,7 @@
                           VerticalAlignment="Stretch"
                           Margin="5"
                           BorderThickness="0"
-                          />
+                          ItemsSource="{Binding Patients}" />
         </xctk:BusyIndicator>
         
     </DockPanel>
